# ftcsim

./: .hgignore  AUTHORS  CMakeLists.txt  README
cmake/: setup-unversioned.sh.in  setup.sh.in
models/: CMakeLists.txt
models/frc_arena_2013/: CMakeLists.txt  model.sdf
models/frc_arena_2013/meshes/: CMakeLists.txt
models/ftc_arena_2013/: CMakeLists.txt  model.config  model.sdf
models/ftc_arena_2013/meshes/: CMakeLists.txt  arena.stl
models/ftc_blue_ring/: CMakeLists.txt  model.config  model.sdf
models/ftc_blue_ring/meshes/: CMakeLists.txt
models/ftc_frisbee/: CMakeLists.txt  model.config  model.sdf
models/ftc_red_ring/: CMakeLists.txt  model.config  model.sdf
models/ftc_robot/: CMakeLists.txt  model.config  model.sdf
models/ftc_robot/meshes/: CMakeLists.txt
models/ftc_robot2/: CMakeLists.txt  model.config  model.sdf
models/ftc_robot2/meshes/: CMakeLists.txt
models/ftc_tower/: CMakeLists.txt  model.config  model.sdf
models/ftc_tower/meshes/: CMakeLists.txt
ros/: CMakeLists.txt
ros/first_utils/: CMakeLists.txt  manifest.xml
ros/first_utils/launch/: CMakeLists.txt  ftc_demo.launch
ros/first_utils/scripts/: CMakeLists.txt  run_gazebo
ros/ftcsim_utils/: CMakeLists.txt  manifest.xml
ros/ftcsim_utils/launch/: CMakeLists.txt  ftc_demo.launch
ros/ftcsim_utils/scripts/: CMakeLists.txt  run_gazebo
ros/ftcsim_utils/src/: CameraPlugin.cc  CameraPlugin.hh  FTC.cc  FTC.hh  FTC2.cc  FTC2.hh
tools/: code_check.sh
worlds/: CMakeLists.txt  ftc_2013.world
