# Construct the ROS_PACKAGE_PATH that we'll need, both at configure and build time.
set(ROS_PACKAGE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ftcsim_utils:$ENV{ROS_PACKAGE_PATH})

ExternalProject_Add(ftcsim_utils
  UPDATE_COMMAND true
  PATCH_COMMAND true
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ftcsim_utils
  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ftcsim_utils
  BUILD_COMMAND env ROS_PARALLEL_JOBS=$ENV{ROS_PARALLEL_JOBS} ROS_ROOT=$ENV{ROS_ROOT} ROS_PACKAGE_PATH=${ROS_PACKAGE_PATH} make $ENV{ROS_PARALLEL_JOBS}
  CMAKE_ARGS
  -DPKG_CONFIG_PATH=${PKG_CONFIG_PATH}:$ENV{PKG_CONFIG_PATH}
  -DROS_ROOT=$ENV{ROS_ROOT}
  -DROS_PACKAGE_PATH=${ROS_PACKAGE_PATH}
  -DFTC_SIM_PROJECT_NAME=${PROJECT_NAME}
  -DFTC_SIM_VERSION=${FTC_SIM_VERSION}
  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
  -DROS_BUILD_TYPE=${CMAKE_BUILD_TYPE}
  -DPLUGIN_LINK_DIRECTORIES=${CMAKE_BINARY_DIR}/plugins
  -DROS_BUILD_TYPE=${CMAKE_BUILD_TYPE}
  INSTALL_COMMAND ""
  )

install(CODE "execute_process(COMMAND make -C ${CMAKE_CURRENT_BINARY_DIR}/ftcsim_utils install)")
